# shooter2d

./: CMakeLists.txt  README.md  build_webassembly.sh
src/: common.h  defs.h  draw.c  draw.h  highscores.c  highscores.h  init.c  init.h  input.c  input.h  main.cpp  sound.c  sound.h  stage.c  stage.h  structs.h  text.c  text.h  title.c  title.h  utils.c
web/: index.html  index.js  index.wasm
